Adjust rows in contact me to correct gapping between message label and textarea, centered, reduced, and rounded off submit button

--- a/site.css
+++ b/site.css
@@ -100,7 +100,7 @@ main {
 form {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 50px) 120px;
+    grid-template-rows: repeat(5, 50px);
     gap: 5px;
     justify-content: center;
     align-items: center;
@@ -122,9 +122,12 @@ form {
 button[type="submit"] {
   padding: 10px;
   font-size: 24px;
+  border-radius: 25px;
+  width: 300px;
+  justify-self: center;
+  align-self: center;
   background-color: #979dac;
   color: white;
-  border: none;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
